--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,14 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
+    
     <title>Urban Living</title>
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
